# wallet_gui-main

./: .gitignore  CHANGELOG.md  GITHUB_SETUP.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  README_NEW.md  README_OLD.md  SECURITY.md  hrm_policy.yaml  install_wallet_gui.sh  main.py  pyproject.toml  requirements.txt  scan_paths.txt  setup.py  setup_wallet_gui.sh  test_terminal_feature.sh  upload_to_github.sh  wallet_gui.py
_archive/documentation/: AUTO_MOUNT_IMPLEMENTATION.md  CHANGES.md  HRM_INTEGRATION_ANALYSIS.md  HRM_INTEGRATION_COMPLETE.md  MANUAL_INTERACTIVE.html  SCANNERS_FOUND.tsv  SCANNER_ORGANISATION.md  SCANNER_STRATEGY.md  scan_paths.txt
_archive/hrm_swarm/: README.md  __init__.py  __main__.py  run_swarm.py  utils.py
_archive/hrm_swarm/agents/: __init__.py  base.py  content_scan.py  file_enum.py  mnemonic_validate.py  yara_scan.py
_archive/hrm_swarm/rules/: wallet_rules.yar
_archive/legacy_scripts/: f99883008.py  wallet_scan_archives.sh  wallet_scan_images.sh
_archive/test_scripts/: test_auto_mount.sh  test_hrm_integration.sh  test_scanner_setup.sh
_archive/tools/: collect_scanners.sh
docs/: ANLEITUNG_INTEGRATION.txt  COMPLETE_IMAGE_SCAN_SUCCESS.txt  DIALOG_IMPROVEMENTS_SUMMARY.txt  DIALOG_SHORTCUTS.md  FILE_DIALOGS_IMPROVED.md  FSEARCH_KDIALOG_INTEGRATION.md  GUI_ELEMENTS_EXPLAINED.md  IMAGE_MOUNT_ERROR_FIX.txt  IMAGE_SCANNING_SOLUTION.txt  KDIALOG_INTEGRATION_SUMMARY.txt  MANUAL.html  PACK_PROJECT_GUIDE.md  PKEXEC_PERMISSION_ISSUE.txt  PROJECT_CLEANUP_SUMMARY.txt  README.md  ROOT_DIRECTORY_PERMISSIONS_FIX.txt  SCANNER_FILE_HANDLING.md  SCANNER_PERFORMANCE_EXPLAINED.txt  SUCCESSFUL_IMAGE_SCAN_SUMMARY.txt  TERMINAL_WINDOW_FEATURE.txt  TEST_SUITE_GUIDE.txt  TEST_SUITE_SCAN_ANALYSIS.txt
scripts/: create_test_wallets.sh  hrm_swarm_scanner_wrapper.sh  wallet_harvest_any.sh  wallet_harvest_any_gui.sh
src/wallet_scanner/: __init__.py
src/wallet_scanner/cli/: __init__.py  cli_main.py
src/wallet_scanner/core/: __init__.py  config.py  scanner.py  utils.py
src/wallet_scanner/gui/: __init__.py  app.py  main_window.py
standalone/: README.md  hrm_swarm_scanner.py
tools/: pack_project.sh
